<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon_cost_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_store"
            app:layout_constraintBottom_toBottomOf="@+id/cost_of_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cost_of_service">
        </ImageView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/cost_of_service"
            android:minHeight="48dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:id="@+id/icon_service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/service_question"
            app:layout_constraintTop_toBottomOf="@id/service_question"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_service">

        </ImageView>

        <TextView
            android:id="@+id/service_question"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:text="@string/how_was_the_service"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/icon_service_question"
            app:layout_constraintTop_toBottomOf="@+id/cost_of_service">

        </TextView>
        <RadioGroup
            android:id="@+id/tip_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:checkedButton="@id/option_twenty_percent"
            app:layout_constraintStart_toStartOf="@id/service_question"
            app:layout_constraintTop_toBottomOf="@+id/service_question">
            <RadioButton
                android:id="@+id/option_twenty_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing_service">
            </RadioButton>
            <RadioButton
                android:id="@+id/option_eighteen_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_service">
            </RadioButton>
            <RadioButton
                android:id="@+id/option_fifteen_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_service">
            </RadioButton>
        </RadioGroup>
        <ImageView
            android:id="@+id/icon_round_up_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_round_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/round_up_tip"
            app:layout_constraintBottom_toBottomOf="@id/round_up_tip">

        </ImageView>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up_tip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            style="@style/Widget.TipTime.CompoundButton.Switch"
            app:layout_constraintStart_toEndOf="@id/icon_round_up_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tip_options"
            android:checked="true"
            android:text="@string/round_up_tip">
        </com.google.android.material.switchmaterial.SwitchMaterial>
        <Button
            android:id="@+id/calculate_tip_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/round_up_tip"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/round_up_tip"
            android:text="@string/calculate_tip">
        </Button>

        <TextView
            android:id="@+id/tip_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Widget.TipTime.TextView"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Tip Amount: $10"
            app:layout_constraintTop_toBottomOf="@+id/calculate_tip_amount">
        </TextView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
